scenarios/additional_materials/ingress-dashboard.yaml
1) What is service
2) NodePort vs ClusterIP
3) Kube-proxy exposing workers ports

apiVersion: v1
kind: Service
metadata:
  name: basicservice
spec:
  selector:
    app: nginx
  ports:
  - protocol: TCP
    port: 80



apiVersion: v1
kind: Service
metadata:
  name: basicservice
spec:
  type: NodePort
  selector:
    app: nginx
  ports:
  - protocol: TCP
    nodePort: 34000 # Worker Node port to be used, default:random
    port: 33000   # cluster port, default:random
    targetPort: 80  # Target backend, required
